<resources>
    <string name="app_name">NUMAD17S-EntingWu</string>
    <string name="author_name">Enting Wu</string>
    <string name="author_email">wu.en@husky.neu.edu</string>
    <string name="author_year">2nd year MS</string>
    <string name="author_program">Computer Science</string>
    <string name="title_about">About</string>
    <string name="profile_image">profile_image</string>
    <string name="error_message">error</string>

    <string name="button_label_1">About</string>
    <string name="button_label_2">Generate Error</string>
    <string name="button_label_3">Dictionary</string>
    <string name="button_label_4">TicTacToe</string>
    <string name="button_label_5">Word Game</string>
    <string name="button_label_6">Fire Base</string>
    <string name="button_label_7">Realtime Database</string>

    <!--Dictionary-->
    <string name="title_test_dictionary">Test Dictionary</string>
    <string name="edit_text">Enter a word</string>
    <string name="button_label_clear">Clear</string>
    <string name="button_label_return_menu">Menu</string>
    <string name="button_label_acknowledgement">Acknowledgment</string>
    <!--Alert Dialog-->
    <string name="title_acknowledgement">Acknowledgements</string>
    <string name="text_acknowledgement">
        &#8226; "Hello Android" Chapter 3 and 4.\n
        &#8226; https://developer.android.com/\n
        &#8226; http://stackoverflow.com/
    </string>
    <string name="ok_label">OK</string>

    <!--Word Game-->
    <string name="title_word_game">Word Game</string>
    <string name="app_name_word_game">Super Word Game</string>
    <string name="instruction_label">Instruction</string>
    <string name="score_label">Scores</string>
    <string name="leader_board_text">Leader Board</string>
    <string name="score_board_text">Score Board</string>
    <string name="input_username">Please enter your name:</string>
    <string name="button_label_sort_score">By Score</string>
    <string name="button_label_sort_word">By Word</string>
    <string name="button_label_view_score">View Score</string>
    <string name="button_label_congrats">Cong</string>
    <string name="remain_time_label">Time: 03:00</string>
    <string name="initial_score_label">Score: 0</string>

    <string name="username">User</string>
    <string name="date">Date</string>
    <string name="score">Score</string>
    <string name="score_phase">Phase</string>
    <string name="phase_one">Phase 1</string>
    <string name="phase_two">Phase 2</string>
    <string name="longest_word">Word</string>
    <string name="word_score">WordScore</string>

    <!--TicTacToe-->
    <string name="app_name_ttt">UT3</string>
    <string name="long_app_name">Ultimate Tic Tac Toe</string>
    <string name="action_settings">Settings</string>
    <string name="restart_label">Restart</string>
    <string name="main_menu_label">Main Menu</string>
    <string name="declare_winner">%1$s is the winner</string>
    <string name="continue_label">Continue</string>
    <string name="new_game_label">New Game</string>
    <string name="about_title">About Ultimate Tic Tac Toe</string>
    <string name="about_label">About</string>
    <string name="about_text">\
    This game is played just like
    regular Tic Tac Toe with one difference: to win a tile
    you have to win a smaller game of Tic Tac Toe inside that tile.\n\
    \n\
    A tie happens when there are no further moves.
    In the case of a tie in a small board, that will count as a win for
    both sides in the larger game.
    </string>

    <string name="about_wg_text">\
        The background music is downloaded from: "http://www.bensound.com/royalty-free-music/corporate-pop"
        The alphabet icons are from: "https://www.shareicon.net/"
</string>

    <!--FireBase-->
    <string name="quickstart_message">The Log Token button logs the Registration token to the log. The Send Notification Button sends the notification to the client device.</string>
    <string name="send_notification">Send Notification</string>
    <string name="log_token">Log Token</string>

    <string name="msg_subscribed">Subscribed to news topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="go_to_fcm_demo">FCM Demo</string>
    <string name="go_to_realtime_database_demo">Realtime Database Demo</string>

    <string name="add5">Add 5</string>
    <string name="send_notification_text">Send Android Notification</string>
    <string name="subscribe_to_news">Subscribe to \"News\"</string>

    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="no_location_detected">
        No location detected. Make sure location is enabled on the device.
    </string>
</resources>
