<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_word_game_leaderboard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.neu.madcourse.entingwu.firebase.WordGameLeaderBoardActivity">

    <TextView
        android:text="@string/leader_board_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView_leaderboard" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp">

        <TableRow
            android:id="@+id/tableRow_head"
            android:padding="5dip"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_column="1"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/username" />

            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_column="2"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/score" />

            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_column="3"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/longest_word" />

            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_column="4"
                android:gravity="center_horizontal"
                android:text="@string/word_score" />

            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_column="5"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/date" />
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#FF909090" />

        <ListView
            android:id="@+id/leaderBoard_list"
            android:layout_width="fill_parent"
            android:layout_height="150dp">
        </ListView>

    </TableLayout>




</RelativeLayout>
