<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/activity_display_message"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="edu.neu.madcourse.entingwu.assignment1.AboutMe">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="0dp">

        <TextView
            style="@style/TextDefaultStyle"
            android:text="@string/author_name"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="@dimen/font_size_large"
            android:id="@+id/textView_title"
            android:paddingBottom="5dp" />

        <TextView
            style="@style/TextDefaultStyle"
            android:text="@string/author_email"
            android:id="@+id/textView_email" />

        <TextView
            style="@style/TextDefaultStyle"
            android:text="@string/author_year"
            android:id="@+id/textView_year" />

        <TextView
            style="@style/TextDefaultStyle"
            android:text="@string/author_program"
            android:id="@+id/textView_program" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:gravity="center_vertical|center">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/profile_ting"
                android:layout_gravity="center"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/imageView"
                android:layout_above="@+id/textView_phoneid" />

            <TextView
                style="@style/TextDefaultStyle"
                android:text="@string/author_phoneid"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/textView_phoneid"
                android:layout_marginBottom="20dp" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>